Stabilize Forge VM backends and setup flow